[tool.poetry]
name = "brownie-bot"
version = "0.1.0"
description = "General Purpose Discord Helper Bot"
authors = ["transfaeries"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']

disable= [
    "logging-fstring-interpolation"
]
